[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "aax-convert"
version = "0.2.0"
description = "Convert Audible AAX audiobook files to MP3, M4B, FLAC, Opus and other formats with automatic chapter splitting"
readme = "README.md"
requires-python = ">=3.8"
license = "WTFPL"
authors = [
    { name = "Jacob Truman" },
]
keywords = ["audible", "aax", "audiobook", "converter", "m4b", "flac", "opus"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Sound/Audio :: Conversion",
]
dependencies = [
    "setproctitle",
]

[project.optional-dependencies]
progress = [
    "tqdm",
]
dev = [
    "pytest",
    "black",
    "ruff",
]

[project.scripts]
aax-convert = "aax_convert.cli:main"

[project.urls]
Homepage = "https://github.com/trucraft/aax-convert"
Repository = "https://github.com/trucraft/aax-convert"

[tool.hatchling.build.targets.wheel]
packages = ["aax_convert"]

[tool.black]
line-length = 120
target-version = ["py38"]

[tool.ruff]
line-length = 120
target-version = "py38"
